--- a/configuration.yaml
+++ b/configuration.yaml
@@ -34,8 +34,8 @@ http:
         - 192.168.1.1
         - ::1
         - fd00::/8
-    ip_ban_enabled: True
-    login_attempts_threshold: 5
+    #ip_ban_enabled: True
+    #login_attempts_threshold: 5
 
 # Front End
 frontend:
