--- a/packages/rooms/office.yaml
+++ b/packages/rooms/office.yaml
@@ -61,11 +61,11 @@ switch:
     # Turn On Set
     - platform: wake_on_lan
       name: "Wake Set"
-      host: 192.168.1.10
+#     host: 192.168.1.10
       mac: "38-D5-47-AB-B0-EA"
     - platform: wake_on_lan
       name: "Wake Set Secondary"
-      host: 192.168.1.11
+#     host: 192.168.1.11
       mac: "38-D5-47-AB-B0-E9"
 
     - platform: template
